# Haskeme

./: Haskeme.cabal  LICENSE  README.md
app/: Main.hs
src/: Arithmetic.hs  Definition.hs  Eval.hs  Func.hs  Lib.hs  List.hs  Parse.hs
