name:                Haskeme
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/hqythu/Haskeme#readme
license:             MIT
license-file:        LICENSE
author:              Qinyao He
maintainer:          hqythu@gmail.com
copyright:           Qinyao He @ 2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Definition, Parse, Arithmetic, List, Func, Eval, Utils
  build-depends:       base >= 4.7 && < 5
                     , text
                     , mtl
                     , parsec
  default-language:    Haskell2010

executable Haskeme-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , haskeline
                     , Haskeme
  default-language:    Haskell2010

test-suite Haskeme-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Haskeme
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hqythu/Haskeme
